Implementación de Pruebas unitarias
corrección de paquetería
corrección de nombres de clases
correcta implementación de la arquitectura limpia