@@ -7,10 +7,10 @@ import com.BootcampPragma.Api_Emazon.domain.api.BrandServicePort;
 import com.BootcampPragma.Api_Emazon.domain.model.Brand;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
-import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.*;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -22,31 +22,36 @@ public class BrandService {
     private final BrandRequest brandRequest;
     private  final BrandServicePort brandServicePort;
 
-    public List<BrandDto> getAllBrands() {
-        return brandServicePort
+    public Page<BrandDto> getBrandsOrderedByName(String order, int page, int size) {
+
+        Sort sort = "asc".equalsIgnoreCase(order)
+                ? Sort.by("name").descending()
+                : Sort.by("name").ascending();
+        Pageable pageable = PageRequest.of(page, size, sort);
+
+        List<BrandDto> brandDto = brandServicePort
                 .getAllBrands()
                 .stream()
                 .map(brandRequest::toBrandDto)
-                .collect(Collectors.toList()
-                );
+                .toList();
+
+        Comparator<BrandDto> comparator = "asc".equalsIgnoreCase(order)
+                ? Comparator.comparing(BrandDto::getName)
+                : Comparator.comparing(BrandDto::getName).reversed();
+
+        List<BrandDto> sortedBrandDto = brandDto.stream()
+                .sorted(comparator)
+                .toList();
+
+        int start = (int) pageable.getOffset();
+        int end = Math.min(start + pageable.getPageSize(), sortedBrandDto.size());
+
+        return new PageImpl<>(sortedBrandDto.subList(start, end), pageable, sortedBrandDto.size());
     }
 
     public void saveBrand(BrandDto brandDto){
         Brand brand = brandRequest.toBrand(brandDto);
         brandServicePort.saveBrand(brand);
     }
-    public Page<BrandDto> getBrandsOrderedByNameAsc(int page, int size) {
-        PageRequest pageable = PageRequest.of(page, size);
-
-        return brandServicePort.findAllByOrderByNameAsc(pageable)
-                .map(brandRequest::toBrandDto);
-    }
-
-    public Page<BrandDto> getBrandsOrderedByNameDesc(int page, int size) {
-        PageRequest pageable = PageRequest.of(page, size);
-
-        return brandServicePort.findAllByOrderByNameDesc(pageable)
-                .map(brandRequest::toBrandDto);
-    }
-
+    
 }
